[Font-size-updates]  Header - Modules - 4.2 - Links

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/list/views/view-links.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/list/views/view-links.html
@@ -5,7 +5,7 @@
         <li class="eaton-list-links__item">
           <a href="${item.cta.url}"
             aria-label="Go to ${ item.cta.title }"
-            class="eaton-list-links__link"
+            class="eaton-list-links__link b-body-copy-small"
             target="${ item.cta.target }">
             <span class="eaton-list-links__text">
                 ${ item.cta.title }
