--- a/eaton.frontend/src/global/css/base/elements/_buttons.scss
+++ b/eaton.frontend/src/global/css/base/elements/_buttons.scss
@@ -18,6 +18,7 @@
   display: inline-block;
   font-weight: bold;
   max-width: 600px;
+  width: 100%;
 
 
   // Primary Button
@@ -148,12 +149,16 @@
     }
 
   }
+
+  @include media-desktop-and-up {
+    width: auto;
+  }
 }
 
 @include media-mobile-only {
 
   .b-button {
-    max-width: 100%;
+    width: 100%;
 
     &__secondary {
       font-size: 1em;
