--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/global/css/etn-global.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/global/css/etn-global.css
@@ -273,7 +273,7 @@ h5 a, .b-heading-h5 a { color: #005EB8; }
 
 .button--reset { border: 0; border-radius: 0; background: none; padding: 0; -webkit-appearance: none; -moz-appearance: none; appearance: none; }
 
-.b-button { background: none; text-shadow: none; border-radius: 0; border-style: solid; display: inline-block; font-weight: bold; max-width: 600px; }
+.b-button { background: none; text-shadow: none; border-radius: 0; border-style: solid; display: inline-block; font-weight: bold; max-width: 600px; width: 100%; }
 
 .b-button__primary { border-width: 3px; font-size: 1.9rem; padding: 20px 40px; }
 
@@ -311,7 +311,9 @@ h5 a, .b-heading-h5 a { color: #005EB8; }
 
 @media screen and (min-width: 992px) { .b-button__tertiary { font-size: 2rem; } }
 
-@media screen and (max-width: 767px) { .b-button { max-width: 100%; }
+@media screen and (min-width: 992px) { .b-button { width: auto; } }
+
+@media screen and (max-width: 767px) { .b-button { width: 100%; }
   .b-button__secondary { font-size: 1em; } }
 
 .b-list__item { display: inline-block; padding-bottom: 2rem; }
