--- a/eaton.frontend/src/shared/module-product-tabs/css/module-product-tabs.scss
+++ b/eaton.frontend/src/shared/module-product-tabs/css/module-product-tabs.scss
@@ -101,6 +101,15 @@
       display: block;
       left: -50%;
     }
+
+    &__center {
+      a {
+        width: 33.333%;
+        display: inline-block;
+        float: left;
+      }
+    }
+
   }
 
   &--fixed {
@@ -163,7 +172,7 @@
 
   label {
     cursor: pointer;
-    width: 33.333%;
+    width: 100%;
     text-align: center;
     float: left;
     padding: 1.3rem 0;
