--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-product-tabs/css/module-product-tabs.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-product-tabs/css/module-product-tabs.css
@@ -53,6 +53,8 @@
 
 .eaton-product-tabs__buttons::before { content: ''; background-color: #F8F8F8; position: absolute; height: 100%; width: 200%; display: block; left: -50%; }
 
+.eaton-product-tabs__buttons__center a { width: 33.333%; display: inline-block; float: left; }
+
 .eaton-product-tabs--fixed .eaton-product-tabs__tab-panel { padding-top: 390px; }
 
 .eaton-product-tabs--fixed .eaton-product-tabs__buttons { position: fixed; z-index: 99; padding: 0; margin-left: 0; margin-right: 0; }
@@ -73,7 +75,7 @@
 
 .eaton-product-tabs__tab-panel.panel-active { display: block; }
 
-.eaton-product-tabs label { cursor: pointer; width: 33.333%; text-align: center; float: left; padding: 1.3rem 0; margin: 0; background-color: #F8F8F8; font-weight: normal; }
+.eaton-product-tabs label { cursor: pointer; width: 100%; text-align: center; float: left; padding: 1.3rem 0; margin: 0; background-color: #F8F8F8; font-weight: normal; }
 
 .eaton-product-tabs label a { display: block; width: 100%; height: 100%; }
 
