EATON-558: bugfix - added style for external site search

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/search/search-box/views/view-default.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/search/search-box/views/view-default.html
@@ -17,7 +17,8 @@
                     placeholder="${data.form.placeholder}"
                     required="required">
 
-            <div class="eaton-search--default__form-mobile-label u-visible-mobile">
+            <div class="eaton-search--default__form-mobile-label u-visible-mobile
+                        ${ data.form.isExternal ? ' with-external ' : '' }">
               ${data.form.placeholder}
             </div>
 
