--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/search-box/css/search-box.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/search-box/css/search-box.css
@@ -74,6 +74,7 @@
 .eaton-search--default :-moz-placeholder { /* Firefox 18- */ color: #FFF; }
 
 @media screen and (max-width: 479px) { .eaton-search--default__form-mobile-label { position: absolute; width: 100%; padding-right: 32px; color: #FFF; pointer-events: none; line-height: normal; left: 0; top: 0; display: inline-block; }
+  .eaton-search--default__form-mobile-label.with-external { padding-right: 95px; }
   .eaton-search--default ::-webkit-input-placeholder { /* Chrome/Opera/Safari */ color: transparent; }
   .eaton-search--default ::-moz-placeholder { /* Firefox 19+ */ color: transparent; }
   .eaton-search--default :-ms-input-placeholder { /* IE 10+ */ color: transparent; }
