--- a/eaton.frontend/src/components/search-box/css/views/_view-default.scss
+++ b/eaton.frontend/src/components/search-box/css/views/_view-default.scss
@@ -143,6 +143,10 @@
       left: 0;
       top: 0;
       display: inline-block;
+
+      &.with-external {
+        padding-right: 95px;
+      }
     }
 
     //-----------------------------------
