[Font-size-updates]  Header - Modules - 4.3 - Search Service (in Progress)

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/general/link-list/views/view-vertical.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/general/link-list/views/view-vertical.html
@@ -13,7 +13,7 @@
       <li class="eaton-link-list-vertical__list-item">
         <a href="${item.document_download ? item.document_download : item.url}"
           aria-label="Go to ${ item.title }"
-          class="eaton-link-list-vertical__list-link"
+          class="eaton-link-list-vertical__list-link b-body-copy-small"
           target="${ item.external_link ? '_blank' : '_self' }"
           data-sly-attribute.download="${ item.document_download}">
           <span class="eaton-link-list-vertical__list-text">
