--- a/eaton.frontend/src/components/link-list/css/views/_view-vertical.scss
+++ b/eaton.frontend/src/components/link-list/css/views/_view-vertical.scss
@@ -9,14 +9,11 @@
 
   &__eyebrow.heading {
     font-size: 2.4rem;
-    line-height: 2.8px;
+    line-height: 2.8rem;
   }
 
   @include media-desktop-and-up {
     font-size: 1.8rem;
-    &__eyebrow.heading {
-      font-size: 1.8rem;
-    }
   }
 
   &__list {
@@ -35,8 +32,8 @@
   }
 
   &__list-icon {
-    font-size: 0.75em;
-    margin-left: 0.25em;
+    font-size: 1.4rem;
+    margin-left: 0.4rem;
   }
 
   &__external-icon {
@@ -47,7 +44,7 @@
   &__download-text {
     width: 100%;
     margin-left: 30px;
-    font-size: 0.9em;
+    font-size: 1.6rem;
 
     &--description {
       color: $color__primary-gray3;
