[Font-size-updates]  Header - Modules - 4.3 - Search Service

--- a/eaton.frontend/src/components/search-box/css/views/_view-inline.scss
+++ b/eaton.frontend/src/components/search-box/css/views/_view-inline.scss
@@ -19,14 +19,14 @@
   }
 
   .icon {
-    font-size: 18px;
+    font-size: 1.8rem;
     top: 2px;
     position: relative;
   }
 
   &__form-input { // Styles for Form Elements
     background: $color__white;
-    font-size: 1em;
+    font-size: 1.6rem;
     padding: 10px;
   }
 
