[Font-size-updates]  Header - Modules - 4.3 - Link List (needs review)

--- a/eaton.frontend/src/components/link-list/css/views/_view-vertical.scss
+++ b/eaton.frontend/src/components/link-list/css/views/_view-vertical.scss
@@ -14,6 +14,10 @@
 
   @include media-desktop-and-up {
     font-size: 1.8rem;
+
+    &__eyebrow.heading {
+      font-size: 1.8rem;
+    }
   }
 
   &__list {
