--- a/eaton.frontend/src/components/list/css/views/_view-links.scss
+++ b/eaton.frontend/src/components/list/css/views/_view-links.scss
@@ -37,6 +37,7 @@
       padding: 20px 0;
       border-bottom: 1px solid rgba(238, 240, 242, 0.3);
       align-items: center;
+      font-size: 1.5rem;
     }
 
     &__text {
