[Font-size-updates]  Header - Modules - 4.4 - Single Feature

--- a/eaton.frontend/src/components/ttil/css/views/_view-single-feature.scss
+++ b/eaton.frontend/src/components/ttil/css/views/_view-single-feature.scss
@@ -34,14 +34,13 @@
   }
 
   &__item {
-    display: flex;
-    align-items: center;
     padding: ($spacing__sm / 3) 0; // Visually 30px Spacing between items
     text-decoration: none;
+    display: block;
 
     i {
-      font-size: 0.75em;
-      margin-left: 0.25em;
+      font-size: 1.4rem;
+      margin-left: 0.4rem;
     }
 
     .dark-theme & {
