--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/ttil/views/view-single-feature.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/ttil/views/view-single-feature.html
@@ -11,7 +11,7 @@
       <!--/* List Links */-->
       <ul data-sly-list="${ data.cta }" class="eaton-single-feature__links">
         <li>
-          <a href="${ item.url }" class="eaton-single-feature__item" aria-label="Go to ${ item.text }" target="${ item.target }">
+          <a href="${ item.url }" class="eaton-single-feature__item b-body-copy-small" aria-label="Go to ${ item.text }" target="${ item.target }">
             <span>${ item.text }</span>
             <i class="icon icon-chevron-right" aria-hidden="true"></i>
           </a>
