[Font-size-updates]  Header - Modules - 4.5 - TTIL - Download List

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/general/link-list/views/view-download-list.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/general/link-list/views/view-download-list.html
@@ -8,7 +8,7 @@
           <a href="${item.url}" class="eaton-download-list__item" aria-label="Download ${item.type} for ${ item.title }">
             <i class="icon icon-download" aria-hidden="true"></i>
             <div class="eaton-download-list__document">
-                <span class="eaton-download-list__title">${item.title}</span>
+                <span class="eaton-download-list__title b-body-copy-small">${item.title}</span>
                 <span class="eaton-download-list__size">(${item.type} ${item.size})</span>
             </div>
           </a>
