--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/link-list/css/link-list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/link-list/css/link-list.css
@@ -24,7 +24,7 @@
 
 .eaton-link-list-vertical__list-link { display: inline-block; padding: 10px 0; }
 
-.eaton-link-list-vertical__list-icon { font-size: 1.4rem; margin-left: 0.4rem; }
+.eaton-link-list-vertical__list-icon { font-size: 1.4rem; }
 
 .eaton-link-list-vertical__external-icon { padding-right: 10px; font-size: 1.5rem; }
 
@@ -81,11 +81,15 @@
 
 .eaton-download-list__item { display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-flex-wrap: wrap; -ms-flex-wrap: wrap; flex-wrap: wrap; padding: 10px 0; text-decoration: none; margin-bottom: 10px; }
 
-.eaton-download-list__item i { font-size: 0.75em; margin-right: 10px; margin-top: 0.25em; }
+.eaton-download-list__item i { font-size: 1.2rem; margin-right: 10px; margin-top: 0.4rem; }
 
 .dark-theme .eaton-download-list__item { color: #FFF; }
 
 .eaton-download-list__description, .eaton-download-list__title, .eaton-download-list__size { display: block; }
+
+.dark-theme .eaton-download-list__description, .dark-theme .eaton-download-list__title, .dark-theme .eaton-download-list__size { color: #FFF; }
+
+.eaton-download-list__size { font-size: 1.4rem; line-height: 1.8rem; }
 
 .eaton-download-list--has-desc__item { margin-bottom: 15px; }
 
