EATON-557: bugfix hide placeholder when the text is valid

--- a/eaton.frontend/src/components/search-box/css/views/_view-default.scss
+++ b/eaton.frontend/src/components/search-box/css/views/_view-default.scss
@@ -133,6 +133,12 @@
   // Mobile Breakpoint
   //-----------------------------------
   @include media-mobile-portrait {
+    .eaton-search--default__form-input {
+      &:valid + .eaton-search--default__form-mobile-label {
+        display: none;
+      }
+    }
+
     &__form-mobile-label {
       position: absolute;
       width: 100%;
