--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/general/title/views/view-default.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/general/title/views/view-default.html
@@ -6,13 +6,21 @@
     <sly data-sly-test="${ properties.toggleInnerGrid }" >
       <div class="container">
     </sly>
+
+      <!--/*
+        NOTE: "data.style" should have a value of "h1, h2, h3, h4, h5, or h6"
+        This option allows the author to select the HTML tag for SEO purposes / Semantics
+        The appearance of the title should always be the same regardless of the HTML Tag
+      */-->
       <sly data-sly-test=${data.style}>
-        <div data-sly-element="${data.style}" class="eaton-title__headline">${ data.title }</div>
+        <div data-sly-element="${data.style}"
+          class="eaton-title__headline">${ data.title }</div>
       </sly>
       </sly>
       <sly data-sly-test=${!data.style}>
         <h2 class="eaton-title__headline">${ data.title }</h2>
       </sly>
+
     <sly data-sly-test="${ properties.toggleInnerGrid }" >
       </div>
     </sly>
