--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/link-list/css/link-list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/link-list/css/link-list.css
@@ -89,11 +89,13 @@
 
 .dark-theme .eaton-download-list__description, .dark-theme .eaton-download-list__title, .dark-theme .eaton-download-list__size { color: #FFF; }
 
+.eaton-download-list__description { margin-bottom: 10px; }
+
 .eaton-download-list__size { font-size: 1.4rem; line-height: 1.8rem; }
 
-.eaton-download-list--has-desc__item { margin-bottom: 15px; }
+.eaton-download-list--has-desc .eaton-download-list__item { margin-bottom: 20px; }
 
-.eaton-download-list--has-desc__headline { margin-bottom: 30px; }
+.eaton-download-list--has-desc .eaton-download-list__headline { margin-bottom: 30px; }
 
 .eaton-link-list-section-navigation { background-color: #5B6770; }
 
