--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/ttil-list/views/view-featured-list.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/ttil-list/views/view-featured-list.html
@@ -13,11 +13,11 @@
                 </div>
 
                 <div class="eaton-featured-list__body">
-                  <div class="eaton-featured-list__title">
+                  <div class="eaton-featured-list__title b-body-copy-small">
                     ${item.title}
                     <i class="eaton-featured-list__icon glyphicon glyphicon-menu-right" aria-hidden="true"></i>
                   </div>
-                  <div class="eaton-featured-list__text">${item.text}</div>
+                  <div class="eaton-featured-list__text b-body-copy-small">${item.text}</div>
                 </div>
             </a>
         </div>
