--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/search-box/css/search-box.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/search-box/css/search-box.css
@@ -81,14 +81,16 @@
   .eaton-search--default :-ms-input-placeholder { /* IE 10+ */ color: transparent; }
   .eaton-search--default :-moz-placeholder { /* Firefox 18- */ color: transparent; } }
 
-@media screen and (max-width: 991px) { .eaton-search--default__form-input { font-size: 1em; padding-right: 20px; }
+@media screen and (max-width: 991px) { .eaton-search--default__form-input { font-size: 1.8rem; padding-right: 20px; }
   .eaton-search--default__form-submit { padding-right: 0; }
   .eaton-search--default .icon-search { font-size: 1.25em; }
   .search-open .eaton-search--default { height: 100%; overflow-y: auto; } }
 
-@media screen and (min-width: 992px) { .eaton-search--default__form-input, .eaton-search--default .icon-search { font-size: 1.5em; left: 10px; }
-  .eaton-header--fixed .eaton-search--default__form-input, .eaton-header--fixed .eaton-search--default .icon-search { left: 0; }
-  .eaton-header--fixed .eaton-search--default__form-submit { padding-right: 0; } }
+@media screen and (min-width: 992px) { .eaton-search--default__form-input { font-size: 2.4rem; }
+  .eaton-search--default .icon-search { font-size: 2.1rem; left: 10px; }
+  .eaton-header--fixed .eaton-search--default .icon-search { left: 0; }
+  .eaton-header--fixed .eaton-search--default__form-submit { padding-right: 0; }
+  .eaton-search--default__result-item { line-height: 3rem; } }
 
 .eaton-search .form-control { -webkit-appearance: none; -moz-appearance: none; appearance: none; border: 0; border-radius: 0; height: auto; -webkit-box-shadow: none; box-shadow: none; }
 
