--- a/eaton.frontend/src/components/country-selector/css/views/_view-drawer.scss
+++ b/eaton.frontend/src/components/country-selector/css/views/_view-drawer.scss
@@ -88,6 +88,7 @@ $border-color: rgba($color__secondary-gray4, 0.5);
     text-transform: uppercase;
     font-weight: bold;
     color: $color__white;
+    margin-bottom: 0;
   }
 
   // Language Styles
@@ -229,7 +230,7 @@ $border-color: rgba($color__secondary-gray4, 0.5);
     }
 
     &__region-icon {
-      font-size: 0.75em;
+      font-size: 1.2rem;
     }
 
     &__panel-list {
