--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/country-selector/css/country-selector.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/country-selector/css/country-selector.css
@@ -82,7 +82,7 @@
 
 .country-selector-drawer__item-country-name { display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-align: center; -webkit-align-items: center; -ms-flex-align: center; align-items: center; }
 
-.country-selector-drawer__item-country-label { text-transform: uppercase; font-weight: bold; color: #FFF; }
+.country-selector-drawer__item-country-label { text-transform: uppercase; font-weight: bold; color: #FFF; margin-bottom: 0; }
 
 .country-selector-drawer__item-language-list { padding: 0; margin: 0; list-style: none; }
 
@@ -112,7 +112,7 @@
   .country-selector-drawer__region-list a { color: #FFF; padding: 15px 30px 15px 25px; display: block; font-weight: bold; font-size: 1.6rem; line-height: 2.2rem; position: relative; z-index: 5; border-left: 5px solid #5B6770; }
   .country-selector-drawer__region-list a:focus, .country-selector-drawer__region-list a:active { text-decoration: none; }
   .country-selector-drawer__region-list a.active { background: #333F48; border-left: 5px solid #005EB8; }
-  .country-selector-drawer__region-icon { font-size: 0.75em; }
+  .country-selector-drawer__region-icon { font-size: 1.2rem; }
   .country-selector-drawer__panel-list { border-left: 1px solid rgba(204, 210, 215, 0.5); padding-left: 5px; min-height: 420px; }
   .country-selector-drawer__item-list { display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-flex-wrap: wrap; -ms-flex-wrap: wrap; flex-wrap: wrap; }
   .country-selector-drawer__item { border: 0; }
