--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/link-list/css/link-list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/link-list/css/link-list.css
@@ -91,7 +91,7 @@
 
 .eaton-download-list--has-desc__headline { margin-bottom: 30px; }
 
-.eaton-link-list-section-navigation { background-color: #5B6770; }
+.eaton-link-list-section-navigation { background-color: #333F48; }
 
 .eaton-link-list-section-navigation__nav-item { color: #FFF; font-family: Arial; font-weight: bold; }
 
