--- a/eaton.frontend/src/shared/module-tabs/css/module-tabs.scss
+++ b/eaton.frontend/src/shared/module-tabs/css/module-tabs.scss
@@ -31,7 +31,7 @@
   &__list-link {
     background-color: transparent;
     display: block;
-    padding: 2rem;
+    padding: 2rem 6rem;
     text-align: center;
     font-size:18px;
 
