--- a/eaton.frontend/src/components/ttil-list/css/views/_view-landing-hero.scss
+++ b/eaton.frontend/src/components/ttil-list/css/views/_view-landing-hero.scss
@@ -29,6 +29,11 @@
 
       img {
         width: 100%;
+        min-height: 1285px;
+
+        @include media-tablet-and-up {
+          min-height: 668px;
+        }
       }
     }
 
@@ -106,16 +111,6 @@
   }
 }
 
-
-@include media-mobile-only {
-  .carousel-component-slide {
-    img {
-      min-height: 920px;
-    }
-  }
-}
-
-
 @include media-desktop-large {
   .carousel-component {
 
@@ -145,14 +140,6 @@
       background: $color__white;
       margin: 20px auto;
     }
-
-    h2 {
-      font-size: 53px;
-    }
-
-    &__text {
-      font-size: 20px;
-    }
   }
 
 
@@ -162,19 +149,9 @@
   @include media-mobile-and-tablet {
 
     .carousel-component-slide {
-
-      h2 {
-        font-size: 35px;
-      }
-
       &__separator {
         display: none;
       }
-
-      &__text {
-        font-size: 14px;
-      }
     }
-
   }
 }
