--- a/eaton.frontend/src/shared/module-tabs/css/module-tabs.scss
+++ b/eaton.frontend/src/shared/module-tabs/css/module-tabs.scss
@@ -33,7 +33,7 @@
     display: block;
     padding: 2rem 6rem;
     text-align: center;
-    font-size:18px;
+    font-size: 1.8rem;
 
     &:hover,
     &:focus,
