--- a/eaton.frontend/src/components/featured-topic/css/featured-topic.scss
+++ b/eaton.frontend/src/components/featured-topic/css/featured-topic.scss
@@ -5,7 +5,7 @@
 @import "../../../global/css/_config/sass";
 
 .eaton-featured-topic {
-  padding-top: $spacing__md / 2;
+  padding-top: 20px;
   padding-bottom: $spacing__md / 2;
 
   .glyphicon {
