--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/icon-list/views/view-proof-points.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/icon-list/views/view-proof-points.html
@@ -1,4 +1,4 @@
-<sly data-sly-use.data="../data/view-proof-points-data.js">
+<sly data-sly-use.data="${'../data/view-proof-points-data.js' @testdata=properties.testdata}">
 
   <div class="icon-list-proof-points">
     <div class="${properties.toggleInnerGrid ? 'container' : ''} icon-list-proof-points__container">
