[Footer] Add support for links to text-component when used over dark background

--- a/eaton.frontend/src/global/css/base/elements/_rich-text.scss
+++ b/eaton.frontend/src/global/css/base/elements/_rich-text.scss
@@ -71,6 +71,12 @@
 
     color: $color__white;
 
+    a,
+    a:visited {
+      text-decoration: underline;
+      color: $color__white;
+    }
+
     // Headings
     //--------------
     h2,
