[EATON 223] Image List - Only 2 images should display in a row when used in two column grid

--- a/eaton.frontend/src/components/ttil-list/css/views/_view-image-only.scss
+++ b/eaton.frontend/src/components/ttil-list/css/views/_view-image-only.scss
@@ -60,6 +60,11 @@
     &__item {
       flex-basis: 31%;
       margin-bottom: ($spacing__sm * 2);
+
+      // Only 2 images should display when used in two column grid
+      .eaton-grid-control & {
+        flex-basis: 50%;
+      }
     }
   }
 }
