--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/general/link-list/views/view-vertical.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/general/link-list/views/view-vertical.html
@@ -10,10 +10,10 @@
       data-sly-list="${ data.view.links }"
       class="eaton-link-list-vertical__list"
     >
-      <li class="eaton-link-list-vertical__list-item">
+      <li class="eaton-link-list-vertical__list-item b-body-copy-small">
         <a href="${item.document_download ? item.document_download : item.url}"
           aria-label="Go to ${ item.title }"
-          class="eaton-link-list-vertical__list-link b-body-copy-small"
+          class="eaton-link-list-vertical__list-link"
           target="${ item.external_link ? '_blank' : '_self' }"
           data-sly-attribute.download="${ item.document_download}">
           <span class="eaton-link-list-vertical__list-text">
